// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a h1 1`] = `
.emotion-0 {
  color: #222222;
  font-size: 2.125rem;
  font-family: Motiva Sans;
  font-weight: 700;
  line-height: 1.25;
  margin-bottom: calc(2.125rem * 0.5);
}

<h1
  className="emotion-0 emotion-1"
  color="grey100"
  fontSize="size7"
>
  Hello World
</h1>
`;

exports[`renders a h2 1`] = `
.emotion-0 {
  color: #666666;
  font-size: 1.75rem;
  font-family: Motiva Sans;
  font-weight: 700;
  line-height: 1.25;
  margin-bottom: calc(1.75rem * 0.5);
}

<h2
  className="emotion-0 emotion-1"
  color="grey80"
  fontSize="size6"
>
  Hello World
</h2>
`;

exports[`renders a h3 1`] = `
.emotion-0 {
  color: #666666;
  font-size: 1.375rem;
  font-family: Motiva Sans;
  font-weight: 700;
  line-height: 1.25;
  margin-bottom: calc(1.375rem * 0.5);
}

<h3
  className="emotion-0 emotion-1"
  color="grey80"
  fontSize="size5"
>
  Hello World
</h3>
`;

exports[`renders a h4 1`] = `
.emotion-0 {
  color: #666666;
  font-size: 1.125rem;
  font-family: Motiva Sans;
  font-weight: 700;
  line-height: 1.25;
  margin-bottom: calc(1.125rem * 0.5);
}

<h4
  className="emotion-0 emotion-1"
  color="grey80"
  fontSize="size4"
>
  Hello World
</h4>
`;

exports[`renders a h5 1`] = `
.emotion-0 {
  color: #222222;
  font-size: 0.875rem;
  font-family: Motiva Sans;
  font-weight: 700;
  line-height: 1.25;
  margin-bottom: calc(0.875rem * 0.5);
  font-weight: 600;
  line-height: 1.5;
}

<h5
  className="emotion-0 emotion-1"
  color="grey100"
  fontSize="size2"
>
  Hello World
</h5>
`;

exports[`renders a h6 1`] = `
.emotion-0 {
  color: #666666;
  font-size: 0.875rem;
  font-family: Motiva Sans;
  font-weight: 700;
  line-height: 1.25;
  margin-bottom: calc(0.875rem * 0.5);
  font-weight: 400;
  line-height: 1.5;
}

<h6
  className="emotion-0 emotion-1"
  color="grey80"
  fontSize="size2"
>
  Hello World
</h6>
`;
